fix overflow scroll showing on fixed navigation

--- a/assets/styles/landing.css
+++ b/assets/styles/landing.css
@@ -777,6 +777,10 @@ h4 {
   padding: 0 2rem;
 }
 
+#nav {
+  overflow-y: hidden;
+}
+
 #nav li {
   list-style: none;
   font-size: 1.2rem;
